Refactored filter query parameter
