# routers/cartRouter.js
@@ -32,6 +32,7 @@ router
    *       - $ref: '#/parameters/page'
    *       - $ref: '#/parameters/sort'
    *       - $ref: '#/parameters/fields'
+   *       - $ref: '#/parameters/filter'
    *     responses:
    *       200:
    *         description: List of found user's cart documents.
