# routers/orderRouter.js
@@ -31,6 +31,7 @@ router
    *       - $ref: '#/parameters/page'
    *       - $ref: '#/parameters/sort'
    *       - $ref: '#/parameters/fields'
+   *       - $ref: '#/parameters/filter'
    *     responses:
    *       200:
    *         description: List of found user's order documents.
